--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 iPhone:
 * Signing in
-* Jot detail view that shows comments and lets you comment and iPhone home screen grouping action to reveal actions to see that user's profile, all their jots on X subject, all jots on X subject
+* Jot detail view lets you comment and iPhone home screen grouping action to reveal actions to see that user's profile, all their jots on X subject, all jots on X subject
 * Explore API calls
 * User detail view
 * In stream view, a side swipe that lets you unfollow a user completely and unfollow them on a subject
