--- a/TODO
+++ b/TODO
@@ -1,20 +1,19 @@
 iPhone Roadmap:
 
-* Signing in
-* Settings button that lets you log out and populates appropriate username
-* User/credential storage and saving session between app quit
+* Saving session between app quit
 * Need to recreate tab bar controller when logging in so that all state gets cleared after logging out
 => 0.2
 
 * User detail API call
 * User detail view linkable from jot detail view and selecting comments
 * Jot detail view lets you comment
-* Some way to delete your own comments?
+* Some way to delete your own comments? (if you select your own comment, it asks you if you want to delete it instead of bringing you to that person's profile)
 * Lets you jot from the top right nav bar button with your subjects
 => 0.3
 
 * Explore API calls
 * Explore page has a search box (or search table entries) at the top to search for a specific subject, user, or word... or maybe a search tab?
+* Embedly to embed video, photos, and music
 => 0.4
 
 * iPhone home screen grouping action to reveal actions to see that user's profile, all their jots on X subject, all jots on X subject
@@ -28,6 +27,7 @@ iPhone Roadmap:
 => 0.7
 
 * Caching and cache scheduling in settings--options for how long to cache jots/home many jots/how far back and to cache images, jots, comments, and user info (option for only if on WiFi for images) -- now we can read in the subway!  :)
+* Posting comments and jots gets queued when you have no net connection
 * Twitter-like visual notification to let you know that you have new notifications
 => 0.8
 
