Added features beyond v1.0 for iPhone

--- a/TODO
+++ b/TODO
@@ -40,6 +40,9 @@ iPhone Roadmap:
 Tentative:
 * Include tracking so that we can look at usage statistics in the app; e.g. how many people click on notifications in the notifications tab, track redundant tasks, etc 
 
+* Graph/cool visualization for showing who follows you on diff subjects
+=> 1.1
+
 --------------
 iPad:
 
